Correcting slight alignment bug

--- a/themes/site/source/css/main.css
+++ b/themes/site/source/css/main.css
@@ -251,6 +251,6 @@ footer{
 
 		/* Position (margin + padding + nav) */
 		/* NOTE: This will only work for screens greater than 768px tall */
-		top: 505px;
+		top: 506px;
 	}
 }
